[project]
name = "langgraph-lecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.9",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.4",
    "langchain-groq>=0.3.2",
    "langgraph>=0.4.3",
    "pyppeteer>=2.0.0",
    "streamlit>=1.45.1",
    "tiktoken>=0.9.0",
]
